<resources>
    <string name="app_name">captives</string>
    <string name="login">sign in</string>
    <string name="enter_number">enter number kay</string>
    <string name="text_login">login</string>
    <string name="gest">Gust</string>
    <string name="wait_a_faw_time">wait for a time</string>
    <string name="al_enthakat">Violations</string>
    <string name="new_live">New Live</string>
    <string name="profile">profile</string>
    <string name="name">name :</string>
    <string name="data_aser">data aser :</string>
    <string name="data_freedom">data freedom :</string>
    <string name="number_kay">number kay :</string>
    <string name="logout">logout</string>
    <string name="prisoner_statistics">statistics Captives</string>
    <string name="web_site_asre">WebSite Captives</string>
    <string name="setting">Setting</string>
    <string name="about_app">About app</string>
    <string name="size">Size Text</string>
    <string name="mid">Mid</string>
    <string name="english">English</string>
    <string name="Arabic">Arabic</string>
    <string name="languages">languages</string>
    <string name="save_lan">Save Language</string>
    <string name="choosethelanguage">choose the language</string>
    <string name="larg">large</string>
    <string name="text_all_text">All Of Settings in the test</string>
    <string name="prog_1">A program that provides a decent life for prisoners</string>
    <string name="prog_2">Program to empower the released prisoners</string>
    <string name="prog_3">Psychosocial support programme</string>
    <string name="text_prog_1">وذلك لضمان حياة كريمة لهم ورعاية أبنائهم وأسرهم\n</string>
    <string name="text_prog_2">وذلك من خلال الإندماج في المجتمع وتأمين وظائف للأسرى\n</string>
    <string name="text_prog_3">وهذا من خلال مشروع تواصل وزيارة عائلات الأسرى في بيوتهم \n</string>
    <string name="text_prog_1_1"> وذلك من خلال عدة صرف مخصصات رواتب شهرية \n\</string>
    <string name="text_prog_1_2">وتسهيلات و إعفاءات خاصة لعائلات الأسرى</string>
    <string name="text_prog_2_1">\" ومشروع الرعاية الصحية وإسكان الأسرى المحررين \"</string>
    <string name="text_prog_3_1">ومشروع مؤازرة عبر مشاركة الوزارة لحظة تجمعهم \n</string>
    <string name="text_prog_3_2">In front of the headquarters of the cross</string>
    <string name="go">go</string>
    <string name="next">next</string>
    <string name="about_my_app">information in my app</string>
    <string name="description_dialog">That\'s what she said, which he believed, which he believed</string>
    <string name="ok">OK</string>
    <string name="reset_my_app">reset my app</string>
    <string name="reset">reset</string>
    <string name="cansel">Cansel</string>
    <string name="admin">Admin</string>
    <string name="finish">finish</string>
    <string name="text_finsh">Do you want to exit the application</string>
    <string name="enter_password">enter_password</string>
    <string name="enter_password_to_go_admin">enter password to go admin</string>
    <string name="change">change</string>
    <string name="add_title_new">add title new</string>
    <string name="add_description_new">add description new</string>
    <string name="add_link_new">add link new</string>


    <string name="add_title_danger">add title danger</string>
    <string name="add_description_danger">add description danger</string>
    <string name="add_link_danger">add link danger</string>


    <string name="add">add</string>
    <string name="add2">add : </string>
    <string name="text_change_password">Change password</string>
    <string name="enter_password_last">enter password last</string>
    <string name="enter_password_new">enter password new</string>
    <string name="all_login_guest">all login guest</string>
    <string name="login_guest_now">login guest now</string>
    <string name="choose_to_change">choose to change : </string>
    <string name="enter_number_here">enter number here</string>


    <string-array name="Info">
        <item>الأسرى</item>
        <item>المرضى</item>
        <item>الأسيرات</item>
        <item>الأسرى الإداريون</item>
        <item>الصحفين</item>
        <item>النواب</item>
        <item>الأطفال</item>
        <item>قدماء الأسرى</item>
        <item>المؤبدات</item>
    </string-array>


    <string-array name="news">
        <item>خبر جديد</item>
        <item>إنتهاك جديد</item>
    </string-array>

</resources>