<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".app.fragment.dialog.EnterPasswordFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_lan"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/text_not_necessary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/md"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/admin"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColorHint="@color/main_orange_color"
                android:fontFamily="@font/md"
                android:hint="@string/enter_password_to_go_admin"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/text_not_necessary" />

            <info.hoang8f.widget.FButton
                android:id="@+id/btn_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_25sdp"
                android:backgroundTint="@color/main_orange_color"
                android:fontFamily="@font/md"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text="@string/go"
                android:textColor="@color/colorSplashBackground"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>