<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.SettingActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/v1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/cool_black3"
                app:layout_constraintBottom_toBottomOf="@+id/settings"
                app:layout_constraintEnd_toStartOf="@id/settings"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ds"
                android:text="@string/text_all_text"
                android:textColor="@color/red_live"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/cool_black3"
                app:layout_constraintBottom_toBottomOf="@id/settings"
                app:layout_constraintEnd_toStartOf="@id/back_icon_s"
                app:layout_constraintStart_toEndOf="@id/settings"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/back_icon_s"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:rotation="-90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/back" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:backgroundTint="@color/colorCard_size"
                        android:fontFamily="@font/md"
                        android:text="@string/mid"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/size_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/size"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_lan"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_size">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/left_icon"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:rotation="-90"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/left" />


                    <TextView
                        android:id="@+id/lan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/languages"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_reset"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_lan">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/reset_my_app"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <info.hoang8f.widget.FButton
                        android:id="@+id/reset_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:backgroundTint="@color/red_live"
                        android:fontFamily="@font/we"
                        android:text="@string/reset"
                        android:textColor="@color/colorSplashBackground"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_admin"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_reset">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/admin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/left_icon_admin"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:rotation="-90"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/left" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_about"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_admin">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/about_app"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>